bk_ida/gobmkida/c1/gametreefuseki
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gametreefuseki/src/sgf/sgfnode.c:1502:25: error: expected expression
if ( moves_per_game >=  enum mode ) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gametreefuseki/src/sgf/sgfnode.c:1509:12: error: expected expression
*( _OWORD *)p_child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gametreefuseki/src/sgf/sgfnode.c:1509:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)p_child = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gametreefuseki/src/obj/4/sgfnode.o] Error 1
